# auth_microservice

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
auth_microservice/: __init__.py  __main__.py  cli.py  log.py  observability.py  settings.py  tkq.py
auth_microservice/core/: security.py
auth_microservice/db/: base.py  dependencies.py  utils.py
auth_microservice/db/migrations/: env.py
auth_microservice/db/migrations/versions/: 2025-01-15-00-00_create_core_schema.py  2025-01-15-00-10_seed_rbac.py  2025-01-15-00-20_expand_user_login_sessions.py
auth_microservice/db/models/: __init__.py  oltp.py
auth_microservice/rbac/: model.conf  service.py
auth_microservice/services/: __init__.py  activity.py  admin.py  audit.py  billing.py  bootstrap.py  document_store.py  events.py  feature_flags.py  metrics.py  organizations.py  rbac_admin.py  search.py  security.py  sso.py  support.py  users.py
auth_microservice/services/auth/: service.py
auth_microservice/services/rabbit/: lifespan.py
auth_microservice/services/redis/: lifespan.py
auth_microservice/web/: __init__.py  application.py  lifespan.py
auth_microservice/web/api/: __init__.py  dependencies.py  router.py
auth_microservice/web/api/admin/: __init__.py  schemas.py  views.py
auth_microservice/web/api/auth/: __init__.py  schemas.py  views.py
auth_microservice/web/api/docs/: __init__.py
auth_microservice/web/api/echo/: __init__.py  views.py
auth_microservice/web/api/internal/: __init__.py  views.py
auth_microservice/web/api/metrics/: __init__.py  schemas.py  views.py
auth_microservice/web/api/monitoring/: __init__.py
auth_microservice/web/api/rabbit/: __init__.py  views.py
auth_microservice/web/api/rbac/: __init__.py  schemas.py  views.py
auth_microservice/web/api/redis/: __init__.py  views.py
auth_microservice/web/api/settings/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/activity/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/audit/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/auth/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/billing/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/bootstrap/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/feedback/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/flags/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/orgs/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/rbac/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/search/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/security/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/support/: __init__.py  schemas.py  views.py
auth_microservice/web/api/v1/users/: __init__.py  schemas.py  views.py
casdoor/: __init__.py
deploy/: docker-compose.dev.yml
deploy/grafana/dashboards/: auth_microservice_overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: alerts.yml  prometheus.yml
tests/: __init__.py  conftest.py  test_billing.py  test_bootstrap_root.py  test_event_publishing.py  test_feature_flags.py  test_feedback.py  test_organizations.py  test_password_reset_redis.py  test_rbac_admin.py  test_rbac_cache.py  test_search.py  test_security_audit_activity.py  test_support.py  test_users.py
